@@ -1,3 +1,5 @@
+2009-Nov-10 weaver  	Tag V01-06-00.  Removed BLD components from control_gui partition selection.
+		    	Added separate bld "segment-level" event builder.
 2009-Oct-28 weaver  Tag V01-05-00.  Removed Recorder level.
 2009-Oct-27 tomytsai  Add command line options for bldServerTest and bldClientTest to support the multicast address/port/interface options.
 2009-Oct-20 weaver  Tag V01-04-02.  Bug fix to config/ControlScan for live editing of scan
